syntax = "proto3";
package corepb.v1;
option go_package = "./;corepbv1";

import "corepb/v1/user.proto";
import "corepb/v1/todo.proto";
import "corepb/v1/file.proto";
import "corepb/v1/websocket.proto";

message EventbusEmpty {}

message BroadcastEventbusSendResponse {}

// Websocket broadcast event
service BroadcastEventbusService {
  rpc Send(corepb.v1.BroadcastEvent) returns (BroadcastEventbusSendResponse);
}

message UserEventbusUserChangeResponse {}
message UserEventbusSecurityPasswordChangeResponse {}
message UserEventbusSecurityForgotRequestResponse {}
message UserEventbusSecurityRegisterTokenResponse {}
message UserEventbusSecurityInviteTokenResponse {}

service UserEventbusService {
  rpc UserChange(corepb.v1.UserChangeEvent) returns (UserEventbusUserChangeResponse);

  // Password change notification
  rpc SecurityPasswordChange(corepb.v1.UserSecurityEvent)
      returns (UserEventbusSecurityPasswordChangeResponse);
  // Forgot password request notfication
  rpc SecurityForgotRequest(corepb.v1.UserSecurityEvent)
      returns (UserEventbusSecurityForgotRequestResponse);
  // New user registration
  rpc SecurityRegisterToken(corepb.v1.UserSecurityEvent)
      returns (UserEventbusSecurityRegisterTokenResponse);
  // Invite sent
  rpc SecurityInviteToken(corepb.v1.UserSecurityEvent)
      returns (UserEventbusSecurityInviteTokenResponse);
}

message TodoEventbusTodoChangeResponse {}

service TodoEventbusService {
  rpc TodoChange(corepb.v1.TodoChangeEvent) returns (TodoEventbusTodoChangeResponse);
}

message FileEventbusFileUploadedResponse {}
message FileEventbusFileCompleteResponse {}

service FileEventbusService {
  rpc FileUploaded(corepb.v1.FileServiceUploadEvent) returns (FileEventbusFileUploadedResponse);
  rpc FileComplete(corepb.v1.FileServiceCompleteEvent) returns (FileEventbusFileCompleteResponse);
}
